--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,6 +10,16 @@
 </head>
 <body>
     <h1>Get Jazzy</h1>
+    <form id="artistForm" onsubmit="addArtist(event)">
+        <h2>Add A New Artist</h2>
+        <label for="artistName">Artist Name</label>
+        <input type="text" id="artistName" name="artistName"><br>
+        <label for="artistBirth">Artist Birth Date</label>
+        <input type="text" id="artistBirth" name="artistBirth"><br>
+        <label for="artistDeath">Artist Death Date</label>
+        <input type="text" id="artistDeath" name="artistDeath"><br>
+        <input type="submit" id="submit" name="submit">
+    </form>
 
     <h2>Famous Jazz Artists</h2>
     <table>
